--- a/src/sk/stu/fiit/gui/Main_window.form
+++ b/src/sk/stu/fiit/gui/Main_window.form
@@ -106,6 +106,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="IT profesia"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="menuBar"/>
@@ -174,7 +175,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI" size="14" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Zobrazi&#x165; &#x161;pecialistu"/>
+                <Property name="text" type="java.lang.String" value="Zobrazi&#x165; &#x161;pecialistov"/>
               </Properties>
               <Events>
                 <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="viewSpecBtnMouseReleased"/>
@@ -354,7 +355,7 @@
                     <Column editable="false" title="N&#xe1;zov" type="java.lang.Object"/>
                     <Column editable="false" title="Oblas&#x165;" type="java.lang.Object"/>
                     <Column editable="false" title="Po&#x10d;et zamestnancov" type="java.lang.Object"/>
-                    <Column editable="false" title="Logo" type="java.lang.Object"/>
+                    <Column editable="false" title="Po&#x10d;et zamestnancov cez agent&#xfa;ru" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -375,7 +376,7 @@
                       <Renderer/>
                     </Column>
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                      <Title value="Logo"/>
+                      <Title/>
                       <Editor/>
                       <Renderer/>
                     </Column>
