--- a/src/sk/stu/fiit/gui/AddSpecialistWindow.form
+++ b/src/sk/stu/fiit/gui/AddSpecialistWindow.form
@@ -8,6 +8,7 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="Evidencia &#x161;pecialistu"/>
+    <Property name="locationByPlatform" type="boolean" value="true"/>
   </Properties>
   <AccessibilityProperties>
     <Property name="AccessibleContext.accessibleDescription" type="java.lang.String" value=""/>
