--- a/src/sk/stu/fiit/gui/ViewSpecialistWindow.form
+++ b/src/sk/stu/fiit/gui/ViewSpecialistWindow.form
@@ -7,7 +7,8 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="title" type="java.lang.String" value="Evidencia &#x161;pecialistu"/>
+    <Property name="title" type="java.lang.String" value="&#xda;daje &#x161;pecialistu"/>
+    <Property name="locationByPlatform" type="boolean" value="true"/>
   </Properties>
   <AccessibilityProperties>
     <Property name="AccessibleContext.accessibleDescription" type="java.lang.String" value=""/>
